--- a/CNPM/.settings/org.eclipse.core.resources.prefs
+++ b/CNPM/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,8 @@ encoding//src/CNPM/BT2.java=UTF-8
 encoding//src/CNPM/Model/Hodan.java=UTF-8
 encoding//src/CNPM/View/Dashboard.java=UTF-8
 encoding//src/CNPM/View/HomePage.java=UTF-8
+encoding//src/CNPM/View/QuanLiHoDan.java=UTF-8
 encoding//src/CNPM/View/Register.java=UTF-8
+encoding//src/CNPM/View/RegisterTiem.java=UTF-8
 encoding//src/CNPM/View/login.java=UTF-8
 encoding//src/CNPM/helloo.java=UTF-8
